--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -18,7 +18,7 @@
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
     {% style "/css/screen.css" %}
-
+    <input id="token" type="hidden" value="{{csrf-token}}"></input>
     <script type="text/javascript">
         var context = "{{servlet-context}}";
     </script>
