--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,6 +3,13 @@
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to codeqview</title>
+      <link rel="stylesheet" href="http://css-spinners.com/css/spinner/plus.css" type="text/css">
+      <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,700italic' rel='stylesheet' type='text/css'>
+      <style>
+      body  {
+           font-family: 'Merriweather', serif !important;
+       }
+      </style>
   </head>
   <body>
     <div id="navbar"></div>
